--- a/OP/frontend/app/package.json
+++ b/OP/frontend/app/package.json
@@ -22,6 +22,7 @@
     "framer-motion": "^12.23.6",
     "jwt-decode": "^4.0.0",
     "react": "^19.1.0",
+    "react-day-picker": "^9.8.1",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
